--- a/Inheritance Module 14 CIS 1202 Joshua Koo/Inheritance Module 14 CIS 1202 Joshua Koo.vcxproj.filters
+++ b/Inheritance Module 14 CIS 1202 Joshua Koo/Inheritance Module 14 CIS 1202 Joshua Koo.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Car.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Truck.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Vehicle.h">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Car.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Truck.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
